<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EnvironmentCheckerActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="#FFFFFF00"
            android:text="@string/hello_world" />

        <Button android:id="@+id/ambient_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ambient_label"
            android:background="@drawable/btn" />
        <TextView android:id="@+id/ambient_text"
            android:paddingBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder"
            android:textColor="#FFFF66FF"
            android:textStyle="bold" />

        <Button android:id="@+id/light_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/light_label"
            android:background="@drawable/btn" />
        <TextView android:id="@+id/light_text"
            android:paddingBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder"
            android:textColor="#FFFF66FF"
            android:textStyle="bold" />

        <Button android:id="@+id/pressure_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pressure_label"
            android:background="@drawable/btn" />
        <TextView android:id="@+id/pressure_text"
            android:paddingBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder"
            android:textColor="#FFFF66FF"
            android:textStyle="bold" />

        <Button android:id="@+id/humidity_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/humidity_label"
            android:background="@drawable/btn" />
        <TextView android:id="@+id/humidity_text"
            android:paddingBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_placeholder"
            android:textColor="#FFFF66FF"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
